Fix overflow issue and gap on index

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 html, body, #root {
   height: 100%;
   width: 100%;
@@ -20,6 +22,6 @@ code {
 
 #root {
   position: relative;
-  overflow: hidden;
+  background: $background-light;
 }
 
